<resources>
    <string name="app_name">Pra-Assesment</string>
    <string name="about">Dewi Astriani\n6706170048\nD3IF-41-04</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas =</string>
    <string name="keliling">Keliling =</string>
    <string name="share">Share</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas =</string>
    <string name="keliling">Keliling =</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
