<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PersegiPanjang">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/panjang"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lebar"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <Button
                android:id="@+id/bt_hitung_persegipanjang"
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"/>

        <TextView
                android:id="@+id/tv_luas_persegipanjang"
                android:text="@string/luas"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_hitung_persegipanjang"
                app:layout_constraintHorizontal_bias="0.089"/>

        <TextView
                android:id="@+id/tv_keliling_persegipanjang"
                android:text="@string/keliling"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_luas_persegipanjang"
                app:layout_constraintHorizontal_bias="0.095"/>

        <Button
                android:id="@+id/bt_share"
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_keliling_persegipanjang"
                app:layout_constraintHorizontal_bias="0.104"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>